Modifying README file with additional config details to integrate Spanner.